--- a/index.css
+++ b/index.css
@@ -105,6 +105,7 @@ body {
   line-height: 58px;
   text-align: center;
   font-weight: 500;
+  color: white;
   width: 64px;
   height: 64px;
   border-radius: 50%;
@@ -117,16 +118,16 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .background-window {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 75%;
-  height: 50%;
-  padding: 0 36px;
-  background: white;
-  font-size: 36px;
+  height: 100%;
+  font-size: 56px;
+  color: white;
 }
