--- a/index.css
+++ b/index.css
@@ -6,10 +6,6 @@ body {
   cursor: pointer;
 }
 
-.towers-pane img {
-  cursor: pointer;
-}
-
 [src=""] {
   display: none;
 }
@@ -27,6 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .dom-tower {
@@ -77,11 +74,8 @@ body {
   border: 15px solid black;
   padding: 15px;
   font-size: 24px;
-  background: lightgray;
-}
-
-.control-panel div {
-  padding-bottom: 10px;
+  color: white;
+  background: gray;
 }
 
 .controls-pane, 
@@ -93,9 +87,38 @@ body {
 }
 
 .tower-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  padding: 30px 40px 66px 40px;
+  border: 5px solid black;
+  cursor: pointer;
+}
+
+#earth {
+  background: rgb(63, 152, 0);
+}
+
+#water {
+  background: rgb(0, 65, 145);
+}
+
+#fire {
+  background: rgb(125, 0, 0);
+}
+
+.tower-price {
+  position: absolute;
+  bottom: 0px;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  line-height: 36px;
+  text-align: center;
+  font-weight: 500;
+  border-top: 5px solid black;
 }
 
 [class*="instructions-window"] {
