--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ body {
 .control-panel {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   width: 350px;
   box-sizing: border-box;
@@ -78,11 +78,7 @@ body {
   background: gray;
 }
 
-.controls-pane, 
-.controls-pane div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.wave-counter {
   text-align: center;
 }
 
@@ -121,6 +117,28 @@ body {
   border-top: 5px solid black;
 }
 
+.flint-bank {
+  text-align: center;
+}
+
+.controls-pane {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.instructions-controls {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.story-button, .htp-button {
+  cursor: pointer;
+}
+
 [class*="instructions-window"] {
   position: absolute;
 }
@@ -156,6 +174,7 @@ body {
   height: 100vh;
   width: 100vw;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 999;
 }
 
 .story-window {
