--- a/index.css
+++ b/index.css
@@ -1,5 +1,20 @@
-body {
+html, body {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  border: 0;
   margin: 0;
+  /* text-align: center; */
+  overflow: hidden;
+}
+
+#game-container {
+  display: inline-block;
+  /* width: 1900px;
+  height: 1225px; */
+  transform-origin: top left;
+  overflow: hidden;
+  text-align: center;
 }
 
 [src=""] {
@@ -50,7 +65,8 @@ body {
 }
 
 #monolith-game {
-  display: flex; 
+  /* display: flex;  */
+  display: inline-flex; 
   justify-content: center;
 }
 
@@ -65,7 +81,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 350px;
+  /* width: 350px; */
+  width: 20%;
   box-sizing: border-box;
   border: 15px solid black;
   padding: 15px;
