--- a/index.css
+++ b/index.css
@@ -8,11 +8,8 @@ body {
 
 #monolith-game {
   position: absolute;
-  /* dimensions must be calculated and set with js */
-  /* top: 50%;
-  left: 50%; */
-  /* width: 1850px;
-  height: 1200px; */
+  top: 50%;
+  left: 50%;
 }
 
 canvas {
@@ -22,7 +19,6 @@ canvas {
 }
 
 .monolith-background {
-  /* these values need to be percentages */
   position: absolute;
   width: 100%; 
   height: 100%;
